bridge/base/mcp-deployment.yaml
#! mcp-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mcp
    namespace: loanbot
    labels:
        com.docker.compose.project: loanbot
        com.docker.compose.service: mcp
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: loanbot
            com.docker.compose.service: mcp
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: loanbot
                com.docker.compose.service: mcp
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: loanbot-mcp
                  image: loanbot-mcp
                  imagePullPolicy: IfNotPresent
                  args:
                    - python
                    - mcp_server/server.py
                  ports:
                    - name: mcp-8765
                      containerPort: 8765
