bridge/base/mcp-expose.yaml
#! mcp-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: mcp
    namespace: loanbot
    labels:
        com.docker.compose.project: loanbot
        com.docker.compose.service: mcp
spec:
    selector:
        com.docker.compose.project: loanbot
        com.docker.compose.service: mcp
    ports:
        - name: mcp-8765
          port: 8765
          targetPort: mcp-8765
